# magika-sdk-python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-TW.md  build.bat  build.sh  pyproject.toml  requirements.txt  setup.py
examples/: advanced_example.py  basic_example.py
magika_sdk/: __init__.py  async_utils.py  core.py  security.py
tests/: test_magika_sdk.py
